<resources>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="app_name">Mama\'s Kitchen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
</resources>
